...
                              Padding(
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    0.0, 0.0, 0.0, 12.0),
                                child: Container(
                                  width: 200.0,
                                  child: TextFormField(
                                    key: ValueKey('Email_7n2s'),
                                    controller: _model.emailTextController,
                                    focusNode: _model.emailFocusNode,
                                    onChanged: (_) => EasyDebounce.debounce(
                                      '_model.emailTextController',
                                      Duration(milliseconds: 2000),
                                      () => safeSetState(() {}),
                                    ),
                                    autofocus: false,
                                    enabled: true,
                                    obscureText: false,
                                    decoration: InputDecoration(
                                      isDense: true,
                                      labelText: 'Email',
                                      labelStyle: FlutterFlowTheme.of(context)
                                          .labelMedium
                                          .override(
                                            font: GoogleFonts.inter(
                                              fontWeight:
                                                  FlutterFlowTheme.of(context)
...
                              Padding(
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    0.0, 0.0, 0.0, 12.0),
                                child: Container(
                                  width: 200.0,
                                  child: TextFormField(
                                    key: ValueKey('Password_08fk'),
                                    controller: _model.passwordTextController,
                                    focusNode: _model.passwordFocusNode,
                                    autofocus: false,
                                    enabled: true,
                                    obscureText: !_model.passwordVisibility,
                                    decoration: InputDecoration(
                                      isDense: true,
                                      labelText: 'Password',
                                      labelStyle: FlutterFlowTheme.of(context)
                                          .labelMedium
                                          .override(
                                            font: GoogleFonts.inter(
                                              fontWeight:
                                                  FlutterFlowTheme.of(context)
...
                                  ),
                                ),
                              ),
                              Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('ConfirmPassword_7q8x'),
                                  controller:
                                      _model.confirmPasswordTextController,
                                  focusNode: _model.confirmPasswordFocusNode,
                                  autofocus: false,
                                  enabled: true,
                                  obscureText:
...
                                ),
                              ),
                              Padding(
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    0.0, 30.0, 0.0, 12.0),
                                child: FFButtonWidget(
                                  key: ValueKey('Signup_19b7'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'SIGN_UP_PAGE_PAGE_Signup_ON_TAP');
                                    logFirebaseEvent('Signup_auth');
                                    GoRouter.of(context).prepareAuthEvent();
                                    if (_model.passwordTextController.text !=
...
                      onPressed: () async {
                        logFirebaseEvent('SIGN_UP_PAGE_PAGE_LOGIN_BTN_ON_TAP');
                        logFirebaseEvent('Button_navigate_to');

                        context.goNamed(LoginpageWidget.routeName);
                      },
                      text: 'Login',
                      options: FFButtonOptions(
                        padding: EdgeInsetsDirectional.fromSTEB(
                            16.0, 0.0, 16.0, 0.0),
                        iconPadding:
                            EdgeInsetsDirectional.fromSTEB(0.0, 0.0, 0.0, 0.0),
                        color: Color(0x003A7349),
...
