...
                            child: Padding(
                              padding: EdgeInsetsDirectional.fromSTEB(
                                  0.0, 12.0, 0.0, 12.0),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('Name_0sqg'),
                                  controller: _model.nameTextController,
                                  focusNode: _model.nameFocusNode,
                                  onChanged: (_) => EasyDebounce.debounce(
                                    '_model.nameTextController',
                                    Duration(milliseconds: 2000),
                                    () => safeSetState(() {}),
                                  ),
                                  autofocus: false,
                                  enabled: true,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    isDense: true,
                                    labelText: 'Name',
                                    labelStyle: FlutterFlowTheme.of(context)
                                        .labelMedium
                                        .override(
                                          font: GoogleFonts.inter(
                                            fontWeight:
                                                FlutterFlowTheme.of(context)
...
                          Form(
                            key: _model.formKey1,
                            autovalidateMode: AutovalidateMode.disabled,
                            child: Container(
                              width: 200.0,
                              child: TextFormField(
                                key: ValueKey('City_vyce'),
                                controller: _model.cityTextController,
                                focusNode: _model.cityFocusNode,
                                onChanged: (_) => EasyDebounce.debounce(
                                  '_model.cityTextController',
                                  Duration(milliseconds: 2000),
                                  () => safeSetState(() {}),
...
                            ),
                          ),
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                0.0, 70.0, 0.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('CreateAcc_q1vo'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'ONBOARDING_PAGE_CreateAcc_ON_TAP');
                                logFirebaseEvent('CreateAcc_backend_call');

                                await currentUserReference!
...
