...
                                7.0,
                              ),
                            )
                          ],
                        ),
                        child: FFButtonWidget(
                          key: ValueKey('SignUp_9ar6'),
                          onPressed: () async {
                            logFirebaseEvent('SPLASH_PAGE_PAGE_SignUp_ON_TAP');
                            logFirebaseEvent('SignUp_navigate_to');

                            context.pushNamed(SignUpPageWidget.routeName);
                          },
...
